--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -28,6 +28,10 @@ html, body, .notepad-post-container, .notepad-post-header {
     .notepad-post-header-title a:hover {
       color: white; }
 
+.evidence{
+  background: #ffba24;
+}
+
 .post-template {
   /* Header */
   /* based on http://tympanus.net/Development/ArticleIntroEffects/index3.html */
