--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -30,6 +30,7 @@ html, body, .notepad-post-container, .notepad-post-header {
       color: white; }
 
 .evidence{
+  border : 1px solid #eee;
   background: #ffba24;
 }
 
