--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -31,6 +31,7 @@ html, body, .notepad-post-container, .notepad-post-header {
 .evidence{
   border : 1px solid #eee;
   background: #ffba24;
+  border-radius: 5px;
 }
 
 .post-template {
