--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -28,7 +28,7 @@ html, body, .notepad-post-container, .notepad-post-header {
     .notepad-post-header-title a:hover {
       color: white; }
 
-.evidence{
+.orange{
   border : 1px solid #eee;
   background: #ffba24;
   border-radius: 5px;
