--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -91,7 +91,7 @@ html, body, .notepad-post-container, .notepad-post-header {
       max-width: none; }
   .post-template .notepad-post-title {
     z-index: 1000;
-    margin: 10px auto;
+    margin: 0 auto;
     padding: 0 1.25em;
     text-align: center;
     position: absolute;
@@ -352,7 +352,7 @@ html, body, .notepad-post-container, .notepad-post-header {
     .notepad-author-info .notepad-post-author .author-website {
       font-size: 1rem; }
     .notepad-author-info .notepad-post-author h1 {
-      margin: 0;
+      margin: 0 0 30px 0;
       padding: 0;
       font-family: "Montserrat", sans-serif;
       font-weight: 700;
