--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -38,7 +38,7 @@ html, body, .notepad-post-container, .notepad-post-header {
 .code{
   width: 900px;
   margin: 0 auto;
-  max-height: 900px;
+  height: 900px;
 }
 
 
