--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -29,10 +29,16 @@ html, body, .notepad-post-container, .notepad-post-header {
       color: white; }
 
 .orange{
-  border : 1px solid #eee;
   background: #ffba24;
   border-radius: 5px;
   font-weight: bold;
+}
+
+.gray{
+  background: #555;
+  border-radius: 5px;
+  font-weight: bold;
+  color:#fff
 }
 
 .code{
