--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -38,7 +38,8 @@ html, body, .notepad-post-container, .notepad-post-header {
   background: #555;
   border-radius: 5px;
   font-weight: bold;
-  color:#fff
+  color:#fff;
+  padding : 0 3px;
 }
 
 
