--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -32,6 +32,7 @@ html, body, .notepad-post-container, .notepad-post-header {
   background: #ffba24;
   border-radius: 5px;
   font-weight: bold;
+  padding : 0 3px;
 }
 
 .gray{
