--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -43,6 +43,9 @@ html, body, .notepad-post-container, .notepad-post-header {
   padding : 0 3px;
 }
 
+.redline{
+  border-bottom: 2px solid red;
+}
 
 .code{
   width: 900px;
