--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -42,6 +42,13 @@ html, body, .notepad-post-container, .notepad-post-header {
   color:#fff;
   padding : 0 3px;
 }
+.blackbox{
+  font-weight: bold;
+  color:#fff;
+  background: #222;
+  padding : 20px 20px;
+  border-radius: 10px;
+}
 
 .redline{
   border-bottom: 2px solid red;
