--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -48,6 +48,7 @@ html, body, .notepad-post-container, .notepad-post-header {
   background: #222;
   padding : 10px 10px;
   border-radius: 10px;
+  margin: 0 auto;
 }
 
 .redline{
