--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -59,7 +59,10 @@ html, body, .notepad-post-container, .notepad-post-header {
   margin: 0 auto;
 }
 
-
+iframe{
+  display: block;
+  margin: 0 auto;
+}
 
 .post-template {
   /* Header */
