--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -56,7 +56,7 @@ html, body, .notepad-post-container, .notepad-post-header {
 
 .code{
   width: 100%;
-  margin : 0 10%;
+  padding : 0 20%;
 }
 
 .post-template {
