--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -150,7 +150,10 @@ html, body, .notepad-post-container, .notepad-post-header {
           } }
       @media only screen and (min-width: 90em) {
         .post-template .notepad-post-title h1 {
-          font-size: 5.3125rem; } }
+          font-size: 5.3125rem; }  .code{
+            width: 100%;
+            padding : 0 15%;
+          } }
     .post-template .notepad-post-title.background--light h1 {
       color: black; }
     .post-template .notepad-post-title.background--dark h1 {
