--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -137,7 +137,7 @@ html, body, .notepad-post-container, .notepad-post-header {
           font-size: 3.125rem; }
           .code{
             width: 100%;
-            padding : 0 5%;
+            padding : 0;
           } }
       @media only screen and (min-width: 70em) {
         .post-template .notepad-post-title h1 {
