--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -53,6 +53,9 @@ html, body, .notepad-post-container, .notepad-post-header {
 .redline{
   border-bottom: 2px solid red;
 }
+.center{
+  text-align: center;
+}
 
 
 
